hphp/hack/test/sound_dynamic/typing/top_level_2.bad.php.exp
ERROR: File "top_level_2.bad.php", line 7, characters 10-21:
Invalid return type (Typing[4110])
  File "top_level_2.bad.php", line 6, characters 18-23:
  Expected `dynamic` because method or function was called on dynamic or like-type
  File "top_level_2.bad.php", line 7, characters 14-14:
  Type `A<int>` is not a subtype of `dynamic` under dynamic-aware subtyping
