hphp/hack/test/sound_dynamic/typing/top_level_2.bad.php
<?hh

class A<T> {}

<<__SoundDynamicCallable>>
function foo() : A<int> {
  return new A<int>();
}
